update newest data

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Lords of FPL | About</title>
+	<title>FPL Mania | About</title>
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300" rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #360F39 !important;">
-	    <a class="navbar-brand" href="/index.html"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> Lords of FPL</a>
+	    <a class="navbar-brand" href="/index.html"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> FPL Mania </a>
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 	        <span class="navbar-toggler-icon"></span>
 	    </button>
@@ -51,7 +51,7 @@
 		<div class="row" id="about">
 			<div class="col">
 				<h5>About</h5>
-				<p>I play Fantasy Premier League myself and always wanted to have a tool that would allow me to have an all-in-one comparisson view for the players I want to transfer in. I tried to find this online but never came across one. So I decided to develop FPL Mania as a personal project. The data has ben gathered through FPL and understant api, and then merged together for a combined view using Python. For the visualization and building the web app I mainly used D3.js.</p>
+				<p>I play Fantasy Premier League myself and always wanted to have a tool that would allow me to have an all-in-one comparison view for the players I want to transfer in. I tried to find this online but never came across one. So I decided to develop FPL Mania as a personal project. The data has ben gathered through FPL and understant api, and then merged together for a combined view using Python. For the visualization and building the web app I mainly used D3.js.</p>
 				<p>I hope you enjoy the tool. Please consider sending some feedback over, as well as suggestions for improvement!</p>
 				<p>May we all find the next Lundstram and the next Dallas <i class="fas fa-futbol fa-1.5x"></i></p>
 		    </div>
@@ -67,7 +67,7 @@
 				<div class=" col-sm-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">About</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">This is a tool developed using a combination of FPL and Understat data. The comparisson tool is showing a combined view of what I think is the most relevant information for choosing an FPL asset.</p>
+					<p class="mb10">This is a tool developed using a combination of FPL and Understat data. The comparison tool is showing a combined view of what I think is the most relevant information for choosing an FPL asset.</p>
 					<!-- <p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
 					<p><i class="fa fa-phone"></i>  +91-9999878398  </p>
 					<p><i class="fa fa fa-envelope"></i> info@example.com  </p> -->
@@ -95,8 +95,7 @@
 					<ul class="footer_ul_amrc">
 						<li><a href="#"></a></li>
 						<li><a href="https://www.premierleague.com/">Premier League</a></li>
-						<li><a href="https://understat.com/">Understat</a></li>
-						<!-- <li><a href="https://www.bportugal.pt">Banco de Portugal</a></li> -->
+						<!-- <li><a href="https://understat.com/">Understat</a></li> -->
 					</ul>
 				</div>
 			</div>
@@ -110,14 +109,6 @@
 			</ul>
 			<!--foote_bottom_ul_amrc ends here-->
 			<p class="text-center">Copyright 2021</p>
-
-			<!-- <ul class="social_footer_ul">
-			<li><a href="http://webenlance.com"><i class="fab fa-facebook-f"></i></a></li>
-			<li><a href="http://webenlance.com"><i class="fab fa-twitter"></i></a></li>
-			<li><a href="http://webenlance.com"><i class="fab fa-linkedin"></i></a></li>
-			<li><a href="http://webenlance.com"><i class="fab fa-instagram"></i></a></li>
-			</ul> -->
-		<!--social_footer_ul ends here-->
 		</div>
 
 	</footer>
