--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Lords of FPL | Home</title>
+	<title>FPL Mania | Home</title>
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300" rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -21,7 +21,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #360F39 !important;">
-	    <a class="navbar-brand" href="/index.html"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> Lords of FPL | Player Comparison</a>
+	    <a class="navbar-brand" href="/index.html"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> FPL Mania | Player Comparison</a>
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 	        <span class="navbar-toggler-icon"></span>
 	    </button>
@@ -57,7 +57,7 @@
 	</div>
 	<div class="container-fluid nopadding" style="border-bottom:1px solid #cecece;">
 		<div class="row">
-			<div class="col">Last update: 25/02/2020</div>
+			<div class="col">Last update: 01/03/2020</div>
 		</div>
 	    <div class="row">
 			<div class="col-md-3">
@@ -171,7 +171,7 @@
 				<div class=" col-sm-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">About</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">This is a tool developed using a combination of FPL and Understat data. The comparisson tool is showing a combined view of what I think is the most relevant information for choosing an FPL asset.</p>
+					<p class="mb10">This is a tool developed using a combination of FPL and Understat data. The comparison tool is showing a combined view of what I think is the most relevant information for choosing an FPL asset.</p>
 					<!-- <p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
 					<p><i class="fa fa-phone"></i>  +91-9999878398  </p>
 					<p><i class="fa fa fa-envelope"></i> info@example.com  </p> -->
@@ -194,19 +194,13 @@
 				          <input id="button" type="submit" value="Send">
 				        </div>
 				      </form>
-					<!-- <p><i class="fa fa fa-envelope"></i><a href="mailto:bojanstavrik@gmail.com"> bojanstavrik@me.com</a></p> -->
-					<!-- <p><i class="fas fa-globe"></i> <a href="https://bojanstavrikj.github.io/">Pesonal Website</a></p> -->
-					<!-- <p><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/bojan-stavrikj-062995b6/">LinkedIn</a></p> -->
-					<!-- <p><i class="fab fa-instagram"></i> <a href="https://www.instagram.com/the_juicyb/">Instagram</a></p> -->
-					<!-- <p><i class="fab fa-youtube"></i> <a href="https://www.linkedin.com/in/bojan-stavrikj-062995b6/">YouTube</a></p> -->			
 				</div>
 				<div class=" col-sm-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<ul class="footer_ul_amrc">
 						<li><a href="#"></a></li>
 						<li><a href="https://www.premierleague.com/">Premier League</a></li>
-						<li><a href="https://understat.com/">Understat</a></li>
-						<!-- <li><a href="https://www.bportugal.pt">Banco de Portugal</a></li> -->
+						<!-- <li><a href="https://understat.com/">Understat</a></li> -->
 					</ul>
 				</div>
 			</div>
