update google analytics and form submission

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
 	<!-- CSS -->
 	<link href='/css/select2.min.css' rel='stylesheet' type='text/css'>
 	<link rel="icon"  href="/data/futbol-solid.svg">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5R14EDGSG"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-Q5R14EDGSG');
+	</script>
 </head>
 <body>
 	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #360F39 !important;">
@@ -179,7 +188,7 @@
 				<div class=" col-sm-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Contact</h5>
 					<!--headin5_amrc-->
-					<form id="contactform" action="https://formspree.io/moqkaror" method="POST">
+					<form id="contactform" action="https://formspree.io/f/mbjpvzvl" method="POST">
 				        <div class="input">
 				          <p>Name</p><input name="name">
 				        </div>
