--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	</div>
 	<div class="container-fluid nopadding" style="border-bottom:1px solid #cecece;">
 		<div class="row">
-			<div class="col">Last update: 01/03/2020</div>
+			<div id="timestamp-div" class="col">Latest update: <span id="timestamp"></span></div>
 		</div>
 	    <div class="row">
 			<div class="col-md-3">
