--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@
 			<ul class="foote_bottom_ul_amrc">
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
+				<li><a href="sitemap.xml">Sitemaps</a></li>
 			</ul>
 			<!--foote_bottom_ul_amrc ends here-->
 			<p class="text-center">Copyright 2021</p>
