upload privacy policy

--- a/index.html
+++ b/index.html
@@ -219,6 +219,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="sitemap.xml">Sitemaps</a></li>
+				<li><a href="privacy-policy.html">Privacy Policy</a></li>
 			</ul>
 			<!--foote_bottom_ul_amrc ends here-->
 			<p class="text-center">Copyright 2021</p>
