latest updates + expand full fixture table option

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<div class="w-100"></div>
 					<div class="col" id="p1-fitness">
 						<i style ='margin-top:5px;' id="info1" class="fas fa-info-circle"></i>
-					</div>				
+					</div>			
 					<div class="w-100"></div>
 					<div class="col">
 						<img id="pl1" width=25%>
@@ -95,9 +95,11 @@
 						<div class="past_games" id="p1-past-games"></div>
 					</div>
 					<div class="w-100"></div>
+					<div id="p1-full-fixtures" title="Remaining fixtures" style="display:none"></div>
 					<div class="col">
 						<h6>Upcoming Fixtures</h6>
 						<div  id="fixturesp1"></div>
+						<i style ='margin-top:5px;color:grey;' id="full_fix1" class="fas fa-plus-square"></i>
 					</div>
 					<div class="w-100"></div>
 					<div class="col">
@@ -162,8 +164,10 @@
 					</div>
 					<div class="w-100"></div>
 					<div class="col">
+						<div id="p2-full-fixtures" title="Remaining fixtures" style="display:none"></div>
 						<h6>Upcoming Fixtures</h6>
 						<div  id="fixturesp2"></div>
+						<i style ='margin-top:5px;color:grey;' id="full_fix2" class="fas fa-plus-square"></i>
 					</div>
 					<div class="w-100"></div>
 					<div class="col">
