--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@
 						<strong>Free Transfers</strong>
 						<div><a id="free_transfers"></a> free transfers</div>
 					</div>
+					<div class="w-100"></div>
+					<div class="col">
+						<div id="next_gw_fixtures">
+							<i class="fas fa-arrow-left" style="float:left;" id="previous"></i>
+							<i class="fas fa-arrow-right" style="float:right;" id="next"></i>
+						</div>
+				
+					</div>
 					<!-- <div class="col user_transfers">
 						<strong>Color codes</strong>
 						<div id="legend"></div>
@@ -241,6 +249,11 @@
 					</div>
 				</div>
 			</div>
+		</div>
+	</div>
+	<div class="container-fluid" style="border-bottom:1px solid #cecece;">
+		<div class="row">
+			
 		</div>
 	</div>
 	<footer class="footer">
