update footer meta tags, keywords and description

--- a/about.html
+++ b/about.html
@@ -73,16 +73,20 @@
 	<footer class="footer">
 		<div class="container bottom_border">
 			<div class="row">
-				<div class=" col-sm-4">
-					<h5 class="headin5_amrc col_white_amrc pt2">About</h5>
+				<div class=" col-sm-6">
+					<h5 class="headin5_amrc col_white_amrc pt2">What is FML Mania?</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">This is a tool developed using a combination of FPL and Understat data. The comparison tool is showing a combined view of what I think is the most relevant information for choosing an FPL asset.</p>
+					<p class="mb10">FPL Mania is a player comparison tool to help FPL managers simulate player transfers as you would do on <a id="fpl_link" style="text-decoration:none;"href="https://fantasy.premierleague.com/">Fantasy Premier League's</a> official website. </p>
+					<h5 class="headin5_amrc col_white_amrc pt2">Why should you use FPL Mania?</h5>
+					<!--headin5_amrc-->
+					<p class="mb10">The tool gathers and organizes all the important information regarding player performance like totals points, expected goals/assists, bonus points and non-penality goals. All data is aggregated from the Fantasy Premier League's official website and Understat.</p>
 					<!-- <p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
 					<p><i class="fa fa-phone"></i>  +91-9999878398  </p>
 					<p><i class="fa fa fa-envelope"></i> info@example.com  </p> -->
 				</div>
-				<div class=" col-sm-4">
-					<h5 class="headin5_amrc col_white_amrc pt2">Contact me</h5>
+				<div class=" col-sm-6">
+					<h5 class="headin5_amrc col_white_amrc pt2">Contact</h5>
+					<!--headin5_amrc-->
 					<form id="contactform" action="https://formspree.io/f/mbjpvzvl" method="POST">
 				        <div class="input">
 				          <p>Name</p><input name="name">
@@ -97,16 +101,16 @@
 				        <div class="input">
 				          <input id="button" type="submit" value="Send">
 				        </div>
-				      </form>		
+				      </form>
 				</div>
-				<div class=" col-sm-4">
+				<!-- <div class=" col-sm-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<ul class="footer_ul_amrc">
 						<li><a href="#"></a></li>
 						<li><a href="https://www.premierleague.com/">Premier League</a></li>
-						<!-- <li><a href="https://understat.com/">Understat</a></li> -->
+						<li><a href="https://understat.com/">Understat</a></li> 
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
