--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>FPL Mania | Player Comparison Tool</title>
+	<meta name="description" content="FPL Mania is a player comparison tool to help FPL managers simulate player transfers as you would do on Fantasy Premier League's official website. ">
+  	<meta name="keywords" content="fpl player comparison tool">
+	<title>FPL Mania | Player Comparison Tool & Transfer Planner</title>
 	<!-- Google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300" rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
@@ -30,7 +32,7 @@
 </head>
 <body>
 	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #360F39 !important;">
-	    <a class="navbar-brand" href="/index.html"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> FPL Mania | Player Comparison Tool</a>
+	    <a class="navbar-brand" href="/index.html"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> FPL Mania | Player Comparison Tool & Transfer Planner</a>
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 	        <span class="navbar-toggler-icon"></span>
 	    </button>
@@ -259,15 +261,18 @@
 	<footer class="footer">
 		<div class="container bottom_border">
 			<div class="row">
-				<div class=" col-sm-4">
-					<h5 class="headin5_amrc col_white_amrc pt2">About</h5>
+				<div class=" col-sm-6">
+					<h5 class="headin5_amrc col_white_amrc pt2">What is FML Mania?</h5>
 					<!--headin5_amrc-->
-					<p class="mb10">This is a tool developed using a combination of FPL and Understat data. The comparison tool is showing a combined view of what I think is the most relevant information for choosing an FPL asset.</p>
+					<p class="mb10">FPL Mania is a player comparison tool to help FPL managers simulate player transfers as you would do on <a id="fpl_link" style="text-decoration:none;"href="https://fantasy.premierleague.com/">Fantasy Premier League's</a> official website. </p>
+					<h5 class="headin5_amrc col_white_amrc pt2">Why should you use FPL Mania?</h5>
+					<!--headin5_amrc-->
+					<p class="mb10">The tool gathers and organizes all the important information regarding player performance like totals points, expected goals/assists, bonus points and non-penality goals. All data is aggregated from the Fantasy Premier League's official website and Understat.</p>
 					<!-- <p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
 					<p><i class="fa fa-phone"></i>  +91-9999878398  </p>
 					<p><i class="fa fa fa-envelope"></i> info@example.com  </p> -->
 				</div>
-				<div class=" col-sm-4">
+				<div class=" col-sm-6">
 					<h5 class="headin5_amrc col_white_amrc pt2">Contact</h5>
 					<!--headin5_amrc-->
 					<form id="contactform" action="https://formspree.io/f/mbjpvzvl" method="POST">
@@ -286,14 +291,14 @@
 				        </div>
 				      </form>
 				</div>
-				<div class=" col-sm-4">
+				<!-- <div class=" col-sm-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
 					<ul class="footer_ul_amrc">
 						<li><a href="#"></a></li>
 						<li><a href="https://www.premierleague.com/">Premier League</a></li>
-						<!-- <li><a href="https://understat.com/">Understat</a></li> -->
+						<li><a href="https://understat.com/">Understat</a></li> 
 					</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="container">
