filterable selection table proper

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
 			</div>
 			<div class="col-md-4" id="add_player">
 				<div class="col">
-					<!-- <div class="col">
+					<div class="col">
 						<a style="font-weight: bold;">Stat to sort by </a>
 						<select id='select-stat-player-table' style='width: 200px;'></select>
-					</div> -->
+					</div>
 					<select id="search-select" >
 						<option selected value=name>Name</option>
 						<option value=position>Position</option>
