update FML to FPL lol

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
 		<div class="container bottom_border">
 			<div class="row">
 				<div class=" col-sm-6">
-					<h5 class="headin5_amrc col_white_amrc pt2">What is FML Mania?</h5>
+					<h5 class="headin5_amrc col_white_amrc pt2">What is FPL Mania?</h5>
 					<!--headin5_amrc-->
 					<p class="mb10">FPL Mania is a player comparison tool to help FPL managers simulate player transfers as you would do on <a id="fpl_link" style="text-decoration:none;"href="https://fantasy.premierleague.com/">Fantasy Premier League's</a> official website. </p>
 					<h5 class="headin5_amrc col_white_amrc pt2">Why should you use FPL Mania?</h5>
