--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -65,16 +65,12 @@
 	<footer class="footer">
 		<div class="container bottom_border">
 			<div class="row">
-				<div class=" col-sm-4">
+				<!-- <div class=" col-sm-4">
 					<h5 class="headin5_amrc col_white_amrc pt2">About</h5>
-					<!--headin5_amrc-->
 					<p class="mb10">This is a tool developed using a combination of FPL and Understat data. The comparison tool is showing a combined view of what I think is the most relevant information for choosing an FPL asset.</p>
-					<!-- <p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-					<p><i class="fa fa-phone"></i>  +91-9999878398  </p>
-					<p><i class="fa fa fa-envelope"></i> info@example.com  </p> -->
-				</div>
-				<div class=" col-sm-4">
-					<h5 class="headin5_amrc col_white_amrc pt2">Contact me</h5>
+				</div> -->
+				<div class=" col-sm-12">
+					<h5 class="headin5_amrc col_white_amrc pt2">Contact</h5>
 					<form id="contactform" action="https://formspree.io/f/mbjpvzvl" method="POST">
 				        <div class="input">
 				          <p>Name</p><input name="name">
@@ -90,14 +86,6 @@
 				          <input id="button" type="submit" value="Send">
 				        </div>
 				      </form>		
-				</div>
-				<div class=" col-sm-4">
-					<h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
-					<ul class="footer_ul_amrc">
-						<li><a href="#"></a></li>
-						<li><a href="https://www.premierleague.com/">Premier League</a></li>
-						<!-- <li><a href="https://understat.com/">Understat</a></li> -->
-					</ul>
 				</div>
 			</div>
 		</div>
