upload fixture change pithch side

--- a/index.html
+++ b/index.html
@@ -62,9 +62,12 @@
 		<div class="row">
 			<div class="col">
 				<h4 style="width:30% !important; margin:auto">
-					<!-- <i class="fas fa-arrow-left" style="float:left;" id="previous_gw"></i> -->
+					<i class="fas fa-arrow-left" style="float:left;" id="previous_gw"></i>
 					Transfer Planner
-					<!-- <i class="fas fa-arrow-right" style="float:right;" id="next_gw"></i> -->
+					<i class="fas fa-arrow-right" style="float:right;" id="next_gw"></i>
+					<div style="font-size:12px" class="col">
+						<p>Fixtures shown for GW: <a id="gw_planner"></a></p>
+					</div>
 				</h4>
 				<a id="gw-pitch"></a>
 			</div>
