update about section

--- a/about.html
+++ b/about.html
@@ -60,9 +60,12 @@
 		<div class="row" id="about">
 			<div class="col">
 				<h5>About</h5>
-				<p>I play Fantasy Premier League myself and always wanted to have a tool that would allow me to have an all-in-one comparison view for the players I want to transfer in. I tried to find this online but never came across one. So I decided to develop FPL Mania as a personal project. The data has ben gathered through FPL and understant api, and then merged together for a combined view using Python. For the visualization and building the web app I mainly used D3.js.</p>
+				<p>I play Fantasy Premier League myself and always wanted to have a tool that would allow me to have an all-in-one view, where I can compare players, see upcoming fixtures, look at additional stats and simulate transfers. I tried to find a tool like this online but never came across one. So I decided to develop FPL Mania as a personal project.</p>
+				<h5>About FPL Mania</h5>
+				<p>The tool allows users to simulate transfers the same way they are able to in the official Premier League interface. The value for managers in using FPL Mania comes from the compact view of all the necessary data to make a decision on which players to transfer in. In the transfer planenr section you can see your team, your bank amount, transfer cost, free transfers, upcoming fixtures (with possibility to move backward/forward), and the basic stats of each player. By clicking any of the players you can either add them to your team, or add them in one of the slots in the comparison tool below. The comparison tool gives a visual overview with two options (radar or diverging chart), showing how the selected players' stats compare to each other. This also includes understat's statistics such as expected goals/assists.</p>
+				<p>The data has been gathered through the FPL and understant API's, and then merged together for a combined view using Python. For the visualization and building the web app I mainly used D3.js.</p>
 				<p>I hope you enjoy the tool. Please consider sending some feedback over, as well as suggestions for improvement!</p>
-				<p>May we all find the next Lundstram and the next Dallas <i class="fas fa-futbol fa-1.5x"></i></p>
+				<p>May we all find the next Lundstram, Dallas and Martinez <i class="fas fa-futbol fa-1.5x"></i></p>
 		    </div>
 		</div>
 	</div>
