--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<!-- CSS -->
 	<link href='/css/select2.min.css' rel='stylesheet' type='text/css'>
 	<link rel="icon"  href="/data/img/futbol-solid.svg">
+	<link rel="image_src" href="preview.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5R14EDGSG"></script>
 	<script>
