thumbnail second update

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link href='/css/select2.min.css' rel='stylesheet' type='text/css'>
 	<link rel="icon"  href="/data/img/futbol-solid.svg">
 	<link rel="image_src" href="preview.png">
+	<meta property="og:image" content="preview.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5R14EDGSG"></script>
 	<script>
