thumbnail corrected path

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 	<!-- CSS -->
 	<link href='/css/select2.min.css' rel='stylesheet' type='text/css'>
 	<link rel="icon"  href="/data/img/futbol-solid.svg">
-	<link rel="image_src" href="preview.png">
-	<meta property="og:image" content="preview.png">
+	<link rel="image_src" href="/data/img/preview.png">
+	<meta property="og:image" content="/data/img/preview.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q5R14EDGSG"></script>
 	<script>
