update same player add and error messages plus gw fix

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 	        </ul>
 	    </div>
 	</nav>
+	<div class="col">
+		<div id="error-message" title="Message" style="display:none; padding:5px;margin:auto;text-align: center;"></div>
+	</div>
 	<div class="container-fluid nopadding" style="border-bottom:1px solid #cecece;">
 		<div class="row">
 			<div class="col">
@@ -133,9 +136,6 @@
 					<i style ='margin-top:5px;' id="table-select-info" class="fas fa-info-circle"></i>
 					<div id="select-player-table"></div>
 				</div>
-			</div>
-			<div class="col">
-				<div id="actions-popup" title="actions" style="display:none"><button id="add_team">Add to my team.</button><button id="add_comparison1">Compare in slot 1</button><button id="add_comparison2">Compare in slot 2</button></div>
 			</div>
 		</div>
 	</div>
