include total points

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
 						<div><a id="free_transfers"></a> free transfers</div>
 					</div>
 					<div class="w-100"></div>
+					<div class="col user_transfers">
+						<strong>Latest Points</strong>
+						<div><a id="gw_transfers"></a> pts</div>
+					</div>
+					<div class="w-100"></div>
 					<div class="col">
 						<div id="next_gw_fixtures">
 							<i class="fas fa-arrow-left" style="float:left;" id="previous"></i>
