--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- CSS -->
 	<link href='/css/select2.min.css' rel='stylesheet' type='text/css'>
+	<!-- <link href='/css/spin.css' rel='stylesheet' type='text/css'> -->
 	<link rel="icon"  href="/data/img/futbol-solid.svg">
 	<link rel="image_src" href="/data/img/preview.png">
 	<meta property="og:image" content="/data/img/preview.png">
@@ -220,6 +221,7 @@
 					</div>
 					<div class="w-100"></div>
 					<div class="col">
+						<div id="radar"></div>
 						<div class="radarChart"></div>	
 					</div>
 				</div>
@@ -330,6 +332,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 </body>
 	<script src="/js/radarChart.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/spin.js/2.0.1/spin.min.js'></script> 
 	<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="crossorigin="anonymous"></script>	
 	<script src="/js/home.js"></script>
 </html>
