fix color + positioning of spinner load

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<!-- CSS -->
 	<link href='/css/select2.min.css' rel='stylesheet' type='text/css'>
-	<!-- <link href='/css/spin.css' rel='stylesheet' type='text/css'> -->
 	<link rel="icon"  href="/data/img/futbol-solid.svg">
 	<link rel="image_src" href="/data/img/preview.png">
 	<meta property="og:image" content="/data/img/preview.png">
@@ -221,8 +220,8 @@
 					</div>
 					<div class="w-100"></div>
 					<div class="col">
-						<div id="radar"></div>
-						<div class="radarChart"></div>	
+						<div id="radar" style="margin-top:100px"></div>
+						<div class="radarChart"></div>
 					</div>
 				</div>
 			</div>
