--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 	                <a class="nav-link active" href="index.html">Home</a>
 	            </li>
 	            <li class="nav-item">
+	                <a class="nav-link" href="shop.html">Shop</a>
+	            </li>
+	            <li class="nav-item">
 	                <a class="nav-link" href="about.html">About</a>
 	            </li>
 	        </ul>
@@ -312,6 +315,7 @@
 		<div class="container">
 			<ul class="foote_bottom_ul_amrc">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="shop.html">Shop</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="sitemap.xml">Sitemaps</a></li>
 				<li><a href="privacy-policy.html">Privacy Policy</a></li>
