--- a/about.html
+++ b/about.html
@@ -50,6 +50,9 @@
 	            <li class="nav-item">
 	                <a class="nav-link" href="index.html">Home</a>
 	            </li>
+	            <li class="nav-item">
+	                <a class="nav-link" href="shop.html">Shop</a>
+	            </li>
 	            <li class="nav-item active">
 	                <a class="nav-link" href="about.html">About</a>
 	            </li>
@@ -121,6 +124,7 @@
 		<div class="container">
 			<ul class="foote_bottom_ul_amrc">
 				<li><a href="index.html">Home</a></li>
+				<li><a href="shop.html">Shop</a></li>
 				<li><a href="about.html">About</a></li>
 				<li><a href="sitemap.xml">Sitemaps</a></li>
 				<li><a href="privacy-policy.html">Privacy Policy</a></li>
