added teams stats section + latest data

--- a/index.html
+++ b/index.html
@@ -269,6 +269,25 @@
 			</div>
 		</div>
 	</div>
+	<div class="container-fluid nopadding" style="border-bottom:1px solid #cecece;" id="teams_div">
+		<div class="row">
+			<div class="col">
+				<h2>Attacking and Defensive Stats per Team</h2>	
+			</div>
+		</div>
+		<div class="row">
+			<div class="col" id="teams_1">
+			</div>
+			<div class="col" id="teams_2">
+			</div>
+			<div class="col" id="teams_3">
+			</div>
+			<div class="col" id="teams_4">
+			</div>
+			<div class="col" id="teams_5">
+			</div>
+		</div>
+	</div>
 	<footer class="footer">
 		<div class="container bottom_border">
 			<div class="row">
