--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
 			<div class="col-md-4">
 				<div class="row" id="user-team-select">
 					<div class="col">
-						<h7><strong>Input Team ID </strong></h7><i style ='margin-top:5px; float:right;' id="team_id_info" class="fas fa-info-circle"></i><br> 
-						<input type="text" name="team_id" id="team_id">
-						<button id="team_id_button">Submit</button>
+						<h7><strong>Input Team ID </strong></h7><i style ='margin-top:5px; float:right;' id="team_id_info" class="fas fa-info-circle"></i><br>
+						<form>
+							<input type="text" name="user_id" id="team_id">
+							<button id="team_id_button" type="submit">Submit</button>
+						</form>
 					</div>
 					<div class="w-100"></div>
 					<div class="col user_transfers">
