fix tooltip and add gw only number type

--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
 					</div>
 					<div class="w-100"></div>
 					<div class="col" style="display:none;" id="gw_vs_select">
-						GW: <input style='width: 30px; height:20px' value="1" id="gw1-vs1"></input>-
-						<input style='width: 30px; height:20px' id="gw2-vs1"></input>
+						GW: <input type="number" style='width: 45px; height:20px' value="1" id="gw1-vs1"></input>-
+						<input type="number" style='width: 45px; height:20px' id="gw2-vs1"></input>
 						VS
-						GW: <input style='width: 30px; height:20px' value="1" id="gw1-vs2"></input>-
-						<input style='width: 30px; height:20px'id="gw2-vs2"></input><br>
+						GW: <input type="number" style='width: 45px; height:20px' value="1" id="gw1-vs2"></input>-
+						<input type="number" style='width: 45px; height:20px'id="gw2-vs2"></input><br>
 						<button id="gw_vs_button">Show</button>
 					</div>
 				</div>
@@ -346,6 +346,7 @@
 				<div class="col">
 					<select id='stat-with' style='width: 200px;'>
 						<option value="per_90_min">Per 90 Min</option>
+						<option value="per_game_started">Per Game Started</option>
 						<option value="total">Total</option>
 					</select>
 				</div>
