--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -29,8 +29,8 @@
 	</script>
 </head>
 <body>
-	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #360F39 !important;">
-	    <a class="navbar-brand" href="/index.html"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> FPL Mania </a>
+	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #320936 !important;">
+	    <a class="navbar-brand" href="/index.html"><img style="width:10%" src="/FPL Mania.png"> FPL Mania | Privacy Policy</a>
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 	        <span class="navbar-toggler-icon"></span>
 	    </button>
