--- a/shop.html
+++ b/shop.html
@@ -33,8 +33,8 @@
 	</script>
 </head>
 <body>
-	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #360F39 !important;">
-	    <a class="navbar-brand" href="/index.html" style="white-space: pre-wrap;" id="title"><i class="fas fa-futbol fa-inverse fa-1.5x"></i> FPL Mania | Shop</a>
+	<nav class="navbar navbar-custom navbar-expand-md navbar-dark bg-dark" style="background-color: #320936 !important;">
+	    <a class="navbar-brand" href="/index.html" style="white-space: pre-wrap;" id="title"><img style="width:10%" src="/FPL Mania.png"> FPL Mania | Shop</a>
 	    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
 	        <span class="navbar-toggler-icon"></span>
 	    </button>
